tests/negative/test_attr_type_compiled.orb
fnc main () () {
    sym x:i32;
    +:x 0;
};